[iOS] Swatch appears squished and off-center in inputs of type color https://bugs.webkit.org/show_bug.cgi?id=191279 <rdar://problem/45816319>
Reviewed by Tim Horton.

Source/WebCore:

This patch makes some small adjustments to color inputs on iOS to bring them closer to the intended design.
See comments below for more details.

Tests:  fast/forms/color/color-input-uses-color-well-appearance.html
        fast/forms/color/input-appearance-color.html

* css/html.css:

Adjust the UA stylesheet for color inputs on iOS.

* rendering/RenderTheme.cpp:
(WebCore::RenderTheme::paintDecorations):

When painting decorations for `ColorWellPart`, treat it as a standard button instead of the square button
appearance.

(WebCore::RenderTheme::colorInputStyleSheet const):

Add `-webkit-appearance: color-well;` to the stylesheet for color inputs. Previously, this was special-cased on
iOS, where color input elements had appearances of `textfield`; however, this patch makes some adjustments to
RenderThemeIOS, allowing us to use `color-well` on iOS.

* rendering/RenderTheme.h:
(WebCore::RenderTheme::platformUsesColorWellAppearance const): Deleted.

Remove this from RenderTheme. This is no longer necessary, since all platforms now use
`-webkit-appearance: color-well;`.

* rendering/RenderThemeIOS.h:
* rendering/RenderThemeIOS.mm:
(WebCore::RenderThemeIOS::adjustButtonStyle const):

When painting buttons for color inputs, don't add rounded corners that are present by default for regular
buttons.

LayoutTests:

* fast/forms/color/color-input-uses-color-well-appearance-expected-mismatch.html: Added.
* fast/forms/color/color-input-uses-color-well-appearance.html: Added.

Add a test to verify that setting `-webkit-appearance: textfield;` on a color input causes the color input to
render differently from a color input with a default appearance.

* platform/ios-wk1/TestExpectations:
* platform/ios/TestExpectations:

In the WebKit2 port of iOS, enable a handful of color input tests that are curren

--- a/Source/WebCore/css/html.css
+++ b/Source/WebCore/css/html.css
@@ -906,9 +906,19 @@ select:focus {
 
 #if defined(ENABLE_INPUT_TYPE_COLOR) && ENABLE_INPUT_TYPE_COLOR
 
+#if defined(WTF_PLATFORM_IOS_FAMILY) && WTF_PLATFORM_IOS_FAMILY
+input[type="color"] {
+    padding: 0.3em;
+}
+#endif
+
 input[type="color"]::-webkit-color-swatch-wrapper {
     display: flex;
+#if defined(WTF_PLATFORM_IOS_FAMILY) && WTF_PLATFORM_IOS_FAMILY
+    padding: 0;
+#else
     padding: 4px 2px 5px;
+#endif
     box-sizing: border-box;
     width: 100%;
     height: 100%;
